feat(file): 优化文件多选下载zip打包及文件名编码处理
- 多文件下载时zip包命名格式调整为批量下载_共N条_时间戳.zip，避免名称不明确
- 统一使用URLEncoder对文件名及zip名称进行UTF-8编码，修复中文文件名乱码问题
- 补充FileInfo中basePath字段赋值，完善文件路径信息
- 下载单文件及添加文件入zip时均改用文件原始文件名originalFilename
- 优化response头设置，明确content-type和attachment文件名
- pom.xml中多处sms4j相关依赖排除hutool全家桶依赖，减少重复依赖冲突及包体积